--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -62,10 +62,12 @@
 						<Grid d:DataContext="{d:DesignInstance pi:INote}">
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="Auto"/>
 								<ColumnDefinition Width="*"/>
 							</Grid.ColumnDefinitions>
-							<Image Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
-							<TextBlock Grid.Column="1" 
+							<Image Grid.Column="0" Source="/Resources/star.png"       VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							<Image Grid.Column="1" Source="/Resources/lock_small.png" VerticalAlignment="Center" Visibility="{Binding IsLocked, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							<TextBlock Grid.Column="2" 
 									   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
 									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 									   TextTrimming="CharacterEllipsis" />
@@ -78,19 +80,22 @@
 						<Grid d:DataContext="{d:DesignInstance pi:INote}">
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="Auto" />
+								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition Width="*" />
 								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition Width="3" />
 							</Grid.ColumnDefinitions>
 							<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" 
-									   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							           Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							<Image     Grid.Column="1" Source="/Resources/lock_small.png" VerticalAlignment="Center" 
+							           Visibility="{Binding IsLocked, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 
-							<TextBlock Grid.Column="1" 
+							<TextBlock Grid.Column="2" 
 									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 									   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
 									   TextTrimming="CharacterEllipsis" />
 
-							<TextBlock Grid.Column="2" 
+							<TextBlock Grid.Column="3" 
 									   Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime1:foreground'}"
 									   Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" 
 									   VerticalAlignment="Center">
@@ -116,12 +121,15 @@
 							<Grid Grid.Row="0">
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="Auto"/>
 									<ColumnDefinition Width="*"/>
 								</Grid.ColumnDefinitions>
 								<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" 
-										   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								           Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								<Image     Grid.Column="1" Source="/Resources/lock_small.png" VerticalAlignment="Center" 
+								           Visibility="{Binding IsLocked, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 
-								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal" 
+								<TextBlock Grid.Column="2" FontWeight="Bold" FontStyle="Normal" 
 										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}" 
 										   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
 										   TextTrimming="CharacterEllipsis" />
@@ -168,8 +176,10 @@
 									<ColumnDefinition Width="*"/>
 								</Grid.ColumnDefinitions>
 								<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" 
-										   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
-								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal"
+								           Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								<Image     Grid.Column="1" Source="/Resources/lock_small.png" VerticalAlignment="Center" 
+								           Visibility="{Binding IsLocked, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								<TextBlock Grid.Column="2" FontWeight="Bold" FontStyle="Normal"
 										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}" 
 										   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
 							</Grid>
